[gd_scene load_steps=7 format=3 uid="uid://bt7q2laroj0s3"]

[ext_resource type="Script" path="res://Scenes/Castle/buildings.gd" id="1_nprvt"]
[ext_resource type="Theme" uid="uid://didbnwpcd6xrv" path="res://UI/button.tres" id="2_8p2kv"]
[ext_resource type="PackedScene" uid="uid://bg30j7pl1ac6m" path="res://UI/top_bar_panel.tscn" id="2_bfoin"]
[ext_resource type="PackedScene" uid="uid://bldyil1xkumy3" path="res://Scenes/Castle/building_button.tscn" id="3_2tr5g"]
[ext_resource type="PackedScene" uid="uid://t3bvtqqjqp2s" path="res://UI/upgrade_window.tscn" id="5_fyfbf"]

[sub_resource type="Theme" id="Theme_3b0me"]

[node name="Buildings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nprvt")

[node name="TopBarPanel" parent="." instance=ExtResource("2_bfoin")]
layout_mode = 1

[node name="Production" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 116.0
offset_right = 214.0
offset_bottom = 303.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="Production" type="HBoxContainer" parent="Production"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="FarmContanier" parent="Production/Production" instance=ExtResource("3_2tr5g")]
layout_mode = 2

[node name="WoodContanier" parent="Production/Production" instance=ExtResource("3_2tr5g")]
layout_mode = 2

[node name="StoneContanier" parent="Production/Production" instance=ExtResource("3_2tr5g")]
layout_mode = 2

[node name="GoldContanier" parent="Production/Production" instance=ExtResource("3_2tr5g")]
layout_mode = 2

[node name="MillitaryContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 376.0
offset_right = 214.0
offset_bottom = 563.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="Millitary" type="HBoxContainer" parent="MillitaryContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Millitary" parent="MillitaryContainer/Millitary" instance=ExtResource("3_2tr5g")]
layout_mode = 2

[node name="Label" parent="MillitaryContainer/Millitary/Millitary/HBoxContainer" index="0"]
text = "兵营"

[node name="BackToMain" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 73.0
offset_top = -80.0
offset_right = 197.0
offset_bottom = -30.0
grow_vertical = 0
theme = ExtResource("2_8p2kv")
theme_override_font_sizes/font_size = 30
text = "返回"

[node name="RecruitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 222.0
offset_top = -80.0
offset_right = 599.0
offset_bottom = -30.0
grow_vertical = 0
theme = ExtResource("2_8p2kv")
theme_override_font_sizes/font_size = 30
text = "征募士兵（需粮草：100）"

[node name="Soldier" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -397.0
offset_top = -80.0
offset_right = -19.0
offset_bottom = -38.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="Soldier"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "预备兵数量："

[node name="SoldierNum" type="RichTextLabel" parent="Soldier"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 30
text = "0/1000"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "升级"
initial_position = 2
size = Vector2i(800, 500)
theme = SubResource("Theme_3b0me")
ok_button_text = "确认升级"
cancel_button_text = "取消"

[node name="UpgradeWindow" parent="." instance=ExtResource("5_fyfbf")]
visible = false
layout_mode = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 2

[connection signal="pressed" from="Production/Production/FarmContanier/BuildingName" to="." method="_on_farm_pressed"]
[connection signal="pressed" from="Production/Production/WoodContanier/BuildingName" to="." method="_on_wood_pressed"]
[connection signal="pressed" from="Production/Production/StoneContanier/BuildingName" to="." method="_on_stone_pressed"]
[connection signal="pressed" from="Production/Production/GoldContanier/BuildingName" to="." method="_on_gold_pressed"]
[connection signal="pressed" from="BackToMain" to="." method="_on_back_to_main_pressed"]

[editable path="Production/Production/FarmContanier"]
[editable path="Production/Production/WoodContanier"]
[editable path="Production/Production/StoneContanier"]
[editable path="Production/Production/GoldContanier"]
[editable path="MillitaryContainer/Millitary/Millitary"]
